--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "hoist-non-react-statics": "3.3.0",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "minimist": "1.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -72,6 +72,7 @@
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-react-intl": "3.2.1",
     "babel-plugin-react-transform": "3.0.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "circular-dependency-plugin": "5.0.2",
     "css-loader": "3.0.0",
