--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-saga": "1.0.3",
     "reselect": "4.0.0",
     "sanitize.css": "10.0.0",
+    "styled-components": "^4.3.2",
     "warning": "^4.0.3",
     "whatwg-fetch": "3.0.0"
   },
